Updated main and mail demos to iScroll4, beta1. Removed demos/iscroll folder. Added a extension iscroll folder. Added the ability to jump to a particular page when init. It is done by passing '?jqtpage=pageid_no_hash'. Added a class 'alphapage' that indicates the first page. Added 'multiline' support for .rounded <ul>; added example to main demos. Added a ul.stacked for implied seperator. Fixed a bug related to default value on splitscreen history management. Fixed a missing 'var' (nextPage).

--- a/jqtouch/jqtouch.css
+++ b/jqtouch/jqtouch.css
@@ -106,6 +106,18 @@ only screen and (min-device-width: 1024px) {
     display: -moz-box;
 }
 
+#jqt > .current.alphapage .hideonalpha,
+#jqt > .smokedglass.alphapage .hideonalpha,
+#jqt > .clearglass.alphapage .hideonalpha {
+    display: none;
+}
+
+#jqt > .current:not(.alphapage) .showonalpha,
+#jqt > .smokedglass:not(.alphapage) .showonalpha,
+#jqt > .clearglass:not(.alphapage) .showonalpha {
+    display: none;
+}
+
 #jqt > .front {
     z-index: 100;
 }
